--- a/package.json
+++ b/package.json
@@ -1,44 +1,17 @@
 {
-    "name": "nodego-auto-bot",
-    "version": "1.0.0",
-    "description": "Automated bot for NodeGo platform with multi-account and proxy support",
-    "type": "module",
+    "name": "nodego-pinger",
+    "version": "2.0.0",
+    "description": "Ping NodeGo API với nhiều tài khoản và proxy",
     "main": "index.js",
+    "type": "module",
     "scripts": {
-        "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node index.js"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/airdropinsiders/NodeGo-Auto-Bot.git"
-    },
-    "keywords": [
-        "nodego",
-        "bot",
-        "automation",
-        "proxy",
-        "socks",
-        "http-proxy"
-    ],
-    "author": "airdropinsiders",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/airdropinsiders/NodeGo-Auto-Bot/issues"
-    },
-    "homepage": "https://github.com/airdropinsiders/NodeGo-Auto-Bot#readme",
     "dependencies": {
-        "async": "^3.2.6",
-        "axios": "^1.6.7",
-        "chalk": "^5.3.0",
-        "express": "^4.21.2",
-        "http-proxy-agent": "^7.0.2",
-        "https-proxy-agent": "^7.0.2",
-        "p-limit": "^6.2.0",
-        "socket.io": "^4.8.1",
-        "socks-proxy-agent": "^8.0.2",
-        "undici": "^7.3.0"
-    },
-    "engines": {
-        "node": ">=16.0.0"
+      "chalk": "^5.3.0",
+      "p-limit": "^4.0.0",
+      "socks-proxy-agent": "^7.0.0",
+      "undici": "^5.24.0"
     }
-}
+  }
+  
