--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "p-limit": "^4.0.0",
-    "http-proxy-agent": "^7.0.0",
+    "https-proxy-agent": "^7.0.0",
     "undici": "^5.25.0"
   }
 }
