--- a/package.json
+++ b/package.json
@@ -1,17 +1,44 @@
 {
-  "name": "nodego-pinger",
+  "name": "nodego-auto-bot",
   "version": "1.0.0",
-  "description": "Ping NodeGo API với proxy mà không bỏ sót proxy nào",
+  "description": "Automated bot for NodeGo platform with multi-account and proxy support",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+      "start": "node index.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+      "type": "git",
+      "url": "git+https://github.com/airdropinsiders/NodeGo-Auto-Bot.git"
+  },
+  "keywords": [
+      "nodego",
+      "bot",
+      "automation",
+      "proxy",
+      "socks",
+      "http-proxy"
+  ],
+  "author": "airdropinsiders",
+  "license": "MIT",
+  "bugs": {
+      "url": "https://github.com/airdropinsiders/NodeGo-Auto-Bot/issues"
+  },
+  "homepage": "https://github.com/airdropinsiders/NodeGo-Auto-Bot#readme",
   "dependencies": {
-    "chalk": "^5.3.0",
-    "fs-extra": "^11.1.1",
-    "p-limit": "^4.0.0",
-    "undici": "^5.25.0",
-    "https-proxy-agent": "^7.0.2"
+      "async": "^3.2.6",
+      "axios": "^1.6.7",
+      "chalk": "^5.3.0",
+      "express": "^4.21.2",
+      "http-proxy-agent": "^7.0.2",
+      "https-proxy-agent": "^7.0.2",
+      "p-limit": "^6.2.0",
+      "socket.io": "^4.8.1",
+      "socks-proxy-agent": "^8.0.2",
+      "undici": "^7.3.0"
   },
-  "type": "module"
+  "engines": {
+      "node": ">=16.0.0"
+  }
 }
